# GeoParams-Web-and-ML-Moldic-Pores-Toolkit

./: .gitignore  AGENTS.md  README.md  smoke_test_notebooks.py
geo_params_web/: .dockerignore  Dockerfile  anonymize_output_for_public_release.py  app.py  build_image.sh  docker-compose.yml  exports.py  install.sh  localizable_resources.py  nginx.conf  prepare_web_images.py  pyproject.toml  quick_test.py  run.sh  run_app_dev.sh  run_stats_sl.sh  streamlit.toml  supervisord.conf
geo_params_web/exports/: c_min_k_max_params.csv
geo_params_web/libs/: colors.py  colorspace.py  data.py  images.py  path_ex.py  plot_context.py  plot_spread.py  plots.py  session_types.py  web_helpers.py
geo_params_web/notebooks/: data-analysis.ipynb  make-images.ipynb  quick_test.ipynb  slim-section-rects-interactive-visualizer.ipynb  superpositions-1.ipynb
geo_params_web/sl_stats/: sl_app.py
geo_params_web/static/: app.css  app.js
geo_params_web/static/imgs_sections/: metadata.json
geo_params_web/static/imgs_sections/cuts/interesting-parts/: cut-metadata.json
geo_params_web/static/imgs_sections/cuts/no-border/: cut-metadata.json
geo_params_web/static/output/: clicks_data.csv
geo_params_web/static/output/001061aa-b59b-48de-befb-7925a70a2663/0/: clicked_points.json  cropped.json  options.json
geo_params_web/static/output/00282e69-1e97-401f-ab11-0e50ca33d45f/0/: clicked_points.json  cropped.json  options.json
geo_params_web/static/output/00282e69-1e97-401f-ab11-0e50ca33d45f/1/: clicked_points.json  cropped.json  options.json
geo_params_web/static/output/06978db2-e662-4dba-95c1-f9ff10e443e6/0/: clicked_points.json
geo_params_web/static/output/997cd92e-dc91-440c-9f75-d7bce111228e/: clicked_points.json  options.json
geo_params_web/static/output/a01728a2-2432-4c4e-94ae-908a3dea77c0/: clicked_points.json  options.json
geo_params_web/static/output/c27e64d3-d951-45ac-a0bc-34f6a4d02355/: clicked_points.json  options.json
geo_params_web/templates/: about_data.html  actions.html  base.html  base_form.html  end_review.html  image_select.html  params_select.html  user_id.html  userinfo.html
ml_moldic_pores/: cleanup.sh  imports.py  install.sh  nbstripout-all.sh  pyproject.toml  setup.py
ml_moldic_pores/notebooks/: darken-image.ipynb  detect-blue-resin.ipynb  localizable_resources.py  pore-type-supervised-1.0.ipynb  pore-type-supervised-1.0a.ipynb  pore-type-supervised-1.1.ipynb  pore-type-supervised-1.2.0.ipynb  pore-type-supervised-1.2.1-stats-json.ipynb  pore-type-supervised-1.2.2-visualizations.ipynb  pore-type-supervised-1b-other-image.ipynb  pore-type-supervised-1c-best-gamma.ipynb  pore-type-supervised-2.ipynb  pore-type-supervised-3.0-with-pores-channel.ipynb  pore-type-supervised-3.1-with-pores-channel.ipynb  porosity-connectivity-tests-varying-params.ipynb
ml_moldic_pores/src/pre_sal_ii/: __init__.py
ml_moldic_pores/src/pre_sal_ii/custom/: module1.py
ml_moldic_pores/src/pre_sal_ii/improc/: __init__.py  colorspace.py  custom.py  filters.py
ml_moldic_pores/src/pre_sal_ii/libs/: data_helpers.py
ml_moldic_pores/src/pre_sal_ii/models/: __init__.py
ml_moldic_pores/src/pre_sal_ii/models/ds/: ImageSubdivDataset.py  (+4 more)
ml_moldic_pores/src/pre_sal_ii/training/: __init__.py  image_clustering.py  porosity_supervised.py
user_params_porosity/: README.md  imports.py  measure_porosity_from_params.py  pyproject.toml  quick_test.py  run_article_thin_sections.py  run_generalization_test.py
user_params_porosity/data/: cut-metadata.json
(+183 files in other folders)
